--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,94 +1,108 @@
-@import 'includes.scss';
-@include nav(#91919E,
-0%,
-white,
-#ABAABA);
-.even {
-    background: white;
-    padding: 2%;
+@import "includes.scss";
+
+#homePage {
+    background-image: url("../img/bwSkyline2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100% - $navHeight;
 }
 
-.odd {
-    background: $secondary-color;
-    padding: 2%;
+body {
+    font-family: $bodyFonts;
+    @extend %marginReset;
+    background: $lightblue;
 }
 
+h1 {
+    font-family: $titleFonts;
+    margin-left: 5%;
+}
+
+h2 {
+    text-align: center;
+    font-size: 1.4em;
+    font-family: $subheadings;
+}
+
+
+h3 {
+    font-family: $subheadings;
+    text-decoration: underline;
+        font-size: 1.3em;
+}
+
+h4 {
+    font-family: $subheadings;
+    font-size: 1.2em;
+}
 #wrapper {
-    position: fixed;
-    top: 0;
-    width: 100%;
+    margin: 0;
+    height: $navHeight;
+    text-align: center;
+    background: $darkgray;
+    @extend %marginReset;
     li {
-        margin-top: $navHeight / 5;
-    }
-}
-
-#contentTitle {
-    h2 {
-        padding-bottom: 1em;
-    }
-    margin-top: $navHeight / 1.2;
-    height: $navHeight * 1.5;
-    text-align: center;
-}
-
-#video {
-    text-align: center;
-    video {
-        width: 50%;
-        height: 60%;
-        min-width: 640px;
-        margin-top: $navHeight / 1.1;
-        background: black;
-    }
-}
-
-.even,
-.odd {
-    p {
-        text-align: justify;
-    }
-}
-
-#contentTitle {
-    h3 {
-        text-decoration: none;
-    }
-}
-
-.accordion-title {
-    cursor: pointer;
-    border-bottom: black solid 1px;
-}
-
-p.left{
-    text-align: left;
-}
-
-#overlay{
-  background: rgba(0,0,0,0.7);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: none;
-  text-align: center;
-    p{
-        margin: 2%;
-    }
-    img {
-        padding-top: $navHeight / 1.5;
-    }
-}
-
-#gallery {
-    width: 100%;
-    list-style: none;
-    li{
         display: inline-block;
-        width: 15%;
-        img {
-            max-width: 100%;
+        list-style-type: none;
+        margin-top: 2%;
+        a {
+            padding: 0.5em;
+            text-decoration: none;
+            color: white;
+            &:hover, &:focus {
+                color: gray;
+                transition: 500ms;
+            }
         }
     }
+}
+
+.odd,.even {
+    @include squareText;
+    p,li {
+        font-size: 1.1em;
+    }
+}
+
+#drawing {
+    text-align: center;
+    @include squareText;
+}
+#arrows {
+    text-align: center;
+    h2{
+        display: inline-block;
+        width: 80%;
+    }
+    a, a:active {
+        color: black;
+    }
+    #left-arrow {
+        float: left !important;
+        font-size: $arrowSize;
+    }
+    #right-arrow {
+        float: right !important;
+        font-size: $arrowSize;
+    }
+}
+#clearFix {
+    clear:both;
+}
+#video {
+    background: purple;
+    width: 50%;
+    height: 60%;
+    margin: 0 auto;
+    margin-top: $navHeight / 3;
+    video {
+        background: black;
+        width: 100%;
+        height: 100%;
+    }
+}
+.copyright {
+    text-align: right;
+    margin-right: 2%;
 }
